--- a/index.html
+++ b/index.html
@@ -9,31 +9,87 @@
 
   <body>
     <div class="hero">
-      <div class="header">
-        <div class="logo">Header Logo</div>
+      <div class="container">
+        <div class="header">
+          <div class="logo">Header Logo</div>
 
-        <ul class="nav">
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link two</a></li>
-          <li><a href="#">header link three</a></li>
-        </ul>
-      </div>
-
-      <div class="hero-content">
-        <div class="hero-left">
-          <h1>This website is awesome</h1>
-          <p>
-            This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast.
-          </p>
-          <button class="btn">Sign up</button>
+          <ul class="nav">
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+          </ul>
         </div>
 
-        <div class="hero-right">
-          <div class="hero-image">this is a placeholder for an image</div>
+        <div class="hero-content">
+          <div class="hero-left">
+            <h1>This website is awesome</h1>
+            <p>
+              This website has some subtext that goes here under the main title.
+              It's a smaller font and the color is lower contrast.
+            </p>
+            <button class="btn">Sign up</button>
+          </div>
+
+          <div class="hero-right">
+            <div class="hero-image">this is a placeholder for an image</div>
+          </div>
         </div>
       </div>
     </div>
+    <div class="info">
+  <div class="container">
+    <h2>Some random information.</h2>
+
+    <div class="cards">
+      <div class="card">
+        <div class="box"></div>
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+
+      <div class="card">
+        <div class="box"></div>
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+
+      <div class="card">
+        <div class="box"></div>
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+
+      <div class="card">
+        <div class="box"></div>
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="quote">
+  <div class="container quote-container">
+    <p class="quote-text">
+      This is an inspiring quote, or a testimonial from a customer. Maybe it’s just filling up space,
+      or maybe people will actually read it. Who knows? All I know is that it looks nice.
+    </p>
+    <p class="quote-author">-Thor, God of Thunder</p>
+  </div>
+</div>
+<div class="cta">
+  <div class="container">
+    <div class="cta-box">
+      <div class="cta-left">
+        <h3>Call to action! It’s time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+      </div>
+
+      <button class="btn btn-outline">Sign up</button>
+    </div>
+  </div>
+</div>
+
+<div class="footer">
+  Copyright © The Odin Project 2021
+</div>
+
+
   </body>
 </html>
 
